crates/bijux-dna-planner-bam/tests/snapshots/bijux-dna-planner-bam__contracts__explain__bam.authenticity.snap
---
source: crates/bijux-dna-planner-bam/tests/contracts/explain/explainability.rs
expression: reason_json
---
{
  "details": {
    "contract_hash": "7bed6c58704cbfe765606864d3a816ef30912a844e4757cf59d0abaed786f5ff",
    "defaults_diff": {}
  },
  "kind": "default",
  "summary": "tool pmdtools selected by planner"
}
