crates/bijux-dna-planner-bam/tests/snapshots/bijux-dna-planner-bam__contracts__explain__bam.contamination.snap
---
source: crates/bijux-dna-planner-bam/tests/contracts/explain/explainability.rs
expression: reason_json
---
{
  "details": {
    "contract_hash": "33c8d6f650be705ca1a21c3e1fafefd397979b298ce05799b4742719887e80f9",
    "defaults_diff": {},
    "resource_plan": {
      "cpu_threads": 4,
      "disk_gb": 4,
      "input_bytes": 0,
      "input_origin": "real",
      "input_scale": "tiny",
      "io_profile": "balanced_compute_and_io",
      "memory_gb": 4,
      "notes": [
        "sorting/indexing/validation chain dominates temporary storage"
      ],
      "requires_index": true,
      "schema_version": "bijux.bam.resource_plan.v1",
      "scratch_gb": 4,
      "stage_id": "bam.contamination",
      "walltime_minutes": 14
    }
  },
  "kind": "default",
  "summary": "tool verifybamid2 selected by planner"
}
