crates/bijux-dna-planner-bam/tests/snapshots/bijux-dna-planner-bam__contracts__explain__bam.damage.snap
---
source: crates/bijux-dna-planner-bam/tests/contracts/explain/explainability.rs
expression: reason_json
---
{
  "details": {
    "contract_hash": "d93035bed65270346d260e61a76b68bc3c97fa3eeebec933eb176b7fec444175",
    "defaults_diff": {}
  },
  "kind": "default",
  "summary": "tool pydamage selected by planner"
}
